--- a/mathTricks.tex
+++ b/mathTricks.tex
@@ -2,8 +2,8 @@
 \newcommand{\deco}[2]{\par\vspace{1ex}
 \begin{center}\fontsize{#1}{#1}\usefont{U}{webo}{xl}{n}#2\end{center}
 \vspace*{1ex}\par}
-%
-%
+
+
 %------------------------------------------ 
 \input{./Sec/IEEEmath}       \newpage 
 \input{./Sec/BasicElements}  \newpage 
@@ -11,7 +11,9 @@
 \input{./Sec/Thm}            \newpage
 \input{./Sec/Adv}
 %------------------------------------------ 
-\end{document}%EOF
+\end{document}
+
+%%%EOF
 
 
 
