--- a/mathTricks.tex
+++ b/mathTricks.tex
@@ -1,4 +1,4 @@
-\input{!sty/mainnote}
+\input{_sty/mainnote}
 \newcommand{\deco}[2]{\par\vspace{1ex}
 \begin{center}\fontsize{#1}{#1}\usefont{U}{webo}{xl}{n}#2\end{center}
 \vspace*{1ex}\par}
