--- a/_sty/SBNart.sty
+++ b/_sty/SBNart.sty
@@ -295,7 +295,7 @@
 % Matlab Style:
 %-------------------------------------------------------------------------------
 %\usepackage[numbered,framed,autolinebreaks,useliterate]{!sty/mcode}  
-\usepackage[autolinebreaks,useliterate]{!sty/mcode}  
+\usepackage[autolinebreaks,useliterate]{_sty/mcode}  
 
 %-------------------------------------------------------------------------------% Algorithm Pakages:
 %-------------------------------------------------------------------------------
