--- a/_sty/SBNsh.sty
+++ b/_sty/SBNsh.sty
@@ -67,7 +67,7 @@
 \newcommand{\Tab}[1]{\mbox{Table~\ref{#1}}}
 \newcommand{\Tabs}[1]{\mbox{Tables~\ref{#1}}}
 \newcommand{\Eq}[1]{\mbox{Eq.~\eqref{#1}}}
-\newcommand{\Ref}[1]{\mbox{Reference~\cite{#1}}} %Only if sentense starts with a [ref].
+\newcommand{\REF}[1]{\mbox{Reference~\cite{#1}}} %Only if sentense starts with a [ref].
 
 \newcommand{\Thm}[1]{\mbox{Theorem~\ref{#1}}}
 \newcommand{\Lem}[1]{\mbox{Lemma~\ref{#1}}}
